<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loanAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/loan_term_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanTermTextView" />

    <TextView
        android:id="@+id/loanTermTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/loan_amount_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/interestRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/interest_rate_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanAmountTextView" />

    <TextView
        android:id="@+id/compundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/payment_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRateTextView" />

    <EditText
        android:id="@+id/loanAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="250000"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loanTermYearsEditText"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="Years"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/loanTermMonthsEditText"
        app:layout_constraintTop_toBottomOf="@+id/loanAmountEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/loanTermMonthsEditText"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="Months"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanAmountEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/interestRateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="6.5"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanTermYearsEditText"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/payRateSpinner"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        android:entries="@array/payment_frequency_spinner_strings"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRateEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="23dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="192dp"
        android:text="%"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interestRateEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculateLoanButton"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:text="@string/calculate_string"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

</androidx.constraintlayout.widget.ConstraintLayout>