<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/selectedLoanTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/title_string"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selectedLoanDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:paddingLeft="16dp"
        android:text="Description..."
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="italic" />

    <!-- Loan Amount -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/loan_amount_string"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/selectedLoanAmountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Loan Term -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/loan_term_string"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/selectedLoanTermTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Loan Interest -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/interest_rate_string"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/selectedLoanInterestTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Loan Pay Rate -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/payment_string"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/selectedLoanPayRateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <!--Blank Space -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textviewBlankSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Loan Payments -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="Total Payments:"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedLoanPaymentsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Total Number of Payments -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payRateTextLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text=".. Payment Of:"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedLoanTotalNumberOfPaymentsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="#19980B"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Total Pay Back -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="Pay Back:"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedLoanTotalPayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="#19980B"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Total Interest -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:text="@string/total_interest_string"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectedLoanTotalInterestTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="#19980B"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
