<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/savingsInitalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Initial Amount"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="505dp" />

    <TextView
        android:id="@+id/savingsIntialAmountCalculatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="TextView"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="505dp" />

    <TextView
        android:id="@+id/savingsTotalContributionsCalculatedTextVie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="TextView"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsIntialAmountCalculatedTextView" />

    <TextView
        android:id="@+id/savingsTotalInterestEarnedCalculatedTextVie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="TextView"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsTotalContributionsCalculatedTextVie" />

    <TextView
        android:id="@+id/savingsTotalContributionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Total Contributions"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsInitalAmountTextView" />

    <TextView
        android:id="@+id/savingsTotalInterestEarnedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Interest Earned"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsTotalContributionsTextView" />

    <TextView
        android:id="@+id/savingsTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="Total"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsTotalInterestEarnedTextView" />

    <TextView
        android:id="@+id/savingsTotalTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:text="$1000.00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsTotalInterestEarnedTextView" />

    <Button
        android:id="@+id/savingsCalculateLoanButton"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:text="@string/calculate_string"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="23dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="74dp"
        android:text="%"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savingsYearlyInterestEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/savingsDurationYearsEditText"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="Years"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/savingsDurationMonthsEditText"
        app:layout_constraintTop_toBottomOf="@+id/savingsYearlyDepositEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/savingsInitialAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="100"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savingsInitialAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/initial_deposit_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savingsDepositFrequencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/deposit_frequency_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsInitialAmountTextView" />

    <TextView
        android:id="@+id/savingsYearlyDepositTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/continuous_deposit"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsDepositFrequencyTextView" />

    <TextView
        android:id="@+id/savingsDurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/saving_duration_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsYearlyDepositTextView" />

    <TextView
        android:id="@+id/savingsYearlyInterestTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/yearly_interest_rate_string"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsDurationTextView" />

    <EditText
        android:id="@+id/savingsDurationMonthsEditText"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="Months"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsYearlyDepositEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/savingsDepositFrequencySpinner"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="25dp"
        android:entries="@array/savings_frequency_spinner_strings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsInitialAmountEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/savingsYearlyDepositEditText"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="150"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsDepositFrequencySpinner"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/savingsYearlyInterestEditText"
        android:layout_width="67dp"
        android:layout_height="42dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="2.3"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@+id/savingsDurationYearsEditText"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="246dp" />

</androidx.constraintlayout.widget.ConstraintLayout>